
    * Changed exclude file handling to permit DOS or MAC style line
      terminations.  (J.W. Schultz)

    * Ignore errors from chmod when -p/-a/--preserve-perms is not set.
      (Dave Dykstra)

  BUG FIXES:
  
    * Fix "forward name lookup failed" errors on AIX 4.3.3.  (John
      L. Allen, Martin Pool)

    * Generate each file's rolling-checksum data as we send it, not
      in a separate (memory-eating) pass before hand.  This prevents
      timeout errors on really large files. (Stefan Nehlsen)

    * Fix compilation on Tru64.  (Albert Chin, Zoong Pham)

    * Better handling of some client-server errors.  (Martin Pool)

    * Fixed a crash that would occur when sending a list of files that
      contains a duplicate name (if it sorts to the end of the file
      list) and using --delete.  (Wayne Davison)

    * Fixed the file-name duplicate-removal code when dealing with multiple
      dups in a row. (Wayne Davison)

    * Fixed a bug that caused rsync to lose the exit status of its child
      processes and sometimes return an exit code of 0 instead of showing
      an error.  (David R. Staples, Dave Dykstra)

    * Fixed bug in --copy-unsafe-links that caused it to be completely
      broken.  (Dave Dykstra)

    * Prevent infinite recursion in cleanup code under certain circumstances.
      (Sviatoslav Sviridov and Marc Espie)

    * Fixed a bug that prevented rsync from creating intervening directories
      when --relative-paths/-R is set.  (Craig Barratt)

  INTERNAL:

    * Many code cleanups and improved internal documentation.  (Martin 
      Pool, Nelson Beebe)

    * Portability fixes. (Dave Dykstra and Wayne Davison)

    * More test cases.  (Martin Pool)

    * Some test-case fixes.  (Brian Poole, Wayne Davison)

    * Updated included popt to the latest vendor drop, version 1.6.4.
      (Jos Backus)

    * Updated config.guess and config.sub to latest versions; this
      means rsync should build on more platforms.  (Paul Green)